--- a/ups_integration/ups_integration/doctype/parcel_service_settings/parcel_service_settings.json
+++ b/ups_integration/ups_integration/doctype/parcel_service_settings/parcel_service_settings.json
@@ -63,7 +63,7 @@
    "description": "This details are taken from \nhttps://developer.ups.com/tag/Tracking?loc=en_US#operation/Reference%20Tracking%20API",
    "fieldname": "section_break_dkdyk",
    "fieldtype": "Section Break",
-   "label": "UPS - Track By Reference Number Details"
+   "label": "UPS  API - Track By Reference Number Details"
   },
   {
    "default": "/track/v1/reference/details/",
@@ -111,10 +111,10 @@
    "fieldtype": "Column Break"
   },
   {
-   "description": "DN with submit status and in date range of today and past N days such that UPS tracking status is not final (ex Delivered) will be auto checked",
+   "description": "DN with submit status and in date range of today and past N days such that UPS tracking status is not final (ex Delivered) and DN.ship_via is like 'UPS%' will be auto checked",
    "fieldname": "scheduler_details_section",
    "fieldtype": "Section Break",
-   "label": "Scheduler Details For DN"
+   "label": "Scheduler Details For DN in ERPNext"
   },
   {
    "fieldname": "ups_details_section",
@@ -143,13 +143,13 @@
    "description": "API will check eligible Delivery Note for say past 10 days",
    "fieldname": "check_no_of_days_api",
    "fieldtype": "Int",
-   "label": "Check For Past No Of Days"
+   "label": "Check in UPS For Past No Of Days"
   },
   {
    "description": "Scheduler will check eligible Delivery Note for say past 10 days",
    "fieldname": "check_no_of_days_scheduler",
    "fieldtype": "Int",
-   "label": "Check For Past No of Days"
+   "label": "Check ERPNext DN For Past No of Days"
   },
   {
    "default": " https://onlinetools.ups.com/security/v1/oauth/token",
@@ -169,13 +169,13 @@
   {
    "fieldname": "track_by_inquirynumber_details_section",
    "fieldtype": "Section Break",
-   "label": "UPS-Track By Inquiry Number Details"
+   "label": "UPS API -Track By Inquiry Number Details"
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-10-06 07:04:16.336012",
+ "modified": "2025-10-07 23:38:58.277485",
  "modified_by": "Administrator",
  "module": "UPS Integration",
  "name": "Parcel Service Settings",
